# reserves_demand

./: .gitignore  README.md  create_kernel.sh  index.html  pyproject.toml  search.js
.github/workflows/: doc.yml
.ipynb_checkpoints/: pyproject-checkpoint.toml
data/: raw_data.xlsx  reserve_demand_cruve_data.csv
notebooks/: Example.ipynb  test.ipynb
notebooks/.ipynb_checkpoints/: Example-checkpoint.ipynb
public/: reserves_demand.html
public/reserves_demand/: curve_param_fit.html  curve_paramadd_fit.html
reserves_demand/: additive_fit.py  curve_fit.py  curve_nparam_fit.html  curve_nparam_fit.py  curve_param_fit.py  curve_paramadd_fit.py  utils.html  utils.py
reserves_demand/.ipynb_checkpoints/: curve_fit-checkpoint.py
