[tool.poetry]
name = "reserves_demand"
version = "0.0.1"
description = "Automation of model selection, combination and prediction for banks excess reserves"
authors = ["amineraboun <amineraboun@gmail.com>"]
repository ="https://github.com/amineraboun/reserves_demand"
homepage  ="https://github.com/amineraboun/reserves_demand"

readme = "README.md"
keywords = ["Excess reserves", "interest rate", "curve fit"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
scikit-learn = "^1.4.2"
scipy = "^1.11.0"
pygam = "^0.9.1"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
tqdm = "^4.66.2"
pdoc = "^14.4.0"
openpyxl = "^3.1.2"
sphinx = "^7.3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[tool.pylint]
   [tool.pylint."FORMAT"]
   max-line-length = 120
   max-args = 5
   
# Documentation dependencies
[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"